@@ -1,7 +1,10 @@
 plugin.pdfcontroller {
 
-  # cat=PDF Controller - button//200;          type=string;  label= Icon:Path to the button icon
+  # cat=PDF Controller - button//200;           type=string;  label= Icon:Path to the button icon
   button.icon = EXT:pdfcontroller/Resources/Public/Images/pdf.png
+
+  # cat=PDF Controller - config//100;           type=boolean; label= disableAllHeaderCode:If is set, none of the features of the PAGE object is processed but the content of the page. There isn't nor <HTML>-tag neither a default CSS among others.
+  config.disableAllHeaderCode = 1
 
   # cat=PDF Controller - pages pdf//100;        type=int+;    label= typeNum:type number for the PAGE, which generates the PDF. Recommended 67425. Use another number, if you are still using 99.
   pages.pdf.typeNum = 67425
