@@ -13,7 +13,7 @@ plugin.tx_pdfcontroller_pi1 {
     pdf {
       config {
         admPanel              = 0
-        disableAllHeaderCode  = 1
+        disableAllHeaderCode  = {$plugin.pdfcontroller.config.disableAllHeaderCode}
         doctype               = xhtml_strict
         metaCharset           = UTF-8
         xhtml_cleaning        = 0
